<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFiesta</string>
    <string name="hello_world">Events overview</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="drinks_head">Drinks</string>
    <string name="events_head">Events</string>
    <string name="games_head">Games</string>
    <string name="your">YOUR</string>
    <string name="caps_games">GAMES</string>
    <string name="game1">Game 1</string>
    <string name="game2">Game 2</string>
    <string name="title_activity_games">GamesActivity</string>
    <string name="title_activity_calculator_game">CalculatorGameActivity</string>
    <string name="app_game">APP</string>
    <string name="ball_game">BALL</string>
    <string name="card_game">CARD</string>
    <string name="coins_game">COINS</string>
    <string name="dice_game">DICE</string>
    <string name="hands_game">HANDS</string>
    <string name="verbal_game">VERBAL</string>
    <string name="basketball_game">Basketball</string>
    <string name="BeerPong_game">Beer Pong</string>
    <string name="Fubar_game">Fubar</string>
    <string name="Asshole_game">Asshole</string>
    <string name="Kings_game">Kings</string>
    <string name="BusDriver_game">Bus Driver</string>
    <string name="FlipSipStrip_game">Flip, Sip or Strip!</string>
    <string name="Quarters_game">Quarters</string>
    <string name="Spinners_game">Spinners</string>
    <string name="Avalanche_game">Avalanche</string>
    <string name="ThreeMan_game">Three Man</string>
    <string name="Boxing_game">Boxing</string>
    <string name="Thumper_game">Thumper</string>
    <string name="PowerHour_game">Power Hour</string>
    <string name="FuzyDuck_game">Fuzy Duck</string>
    <string name="Animal_game">Animal</string>
    <string name="CardGame1">Higher or Lower</string>
    <string name="RedOrBlackGame">Blue or Orange</string>
    <string name="Calculator_game">Calculate</string>
    <string name="game_information">Information:</string>
    <string name="whatyouneed">What you need:</string>
    <string name="Arrogance_game">Arrogance</string>
    <string name="title_activity_redor_black_game">RedorBlackGameActivity</string>
    <string name="title_activity_card_game">CardGameActivity</string>

</resources>