<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu"
        android:baselineAligned="false"
        android:paddingLeft="0dp"
        android:paddingTop="9dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19.33dp"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="18.67dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="18.67dp"
                    android:layout_height="18.67dp"
                    android:background="@drawable/settingsnotactive"
                    android:contentDescription="@null"
                    android:onClick="SettingsAct" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="18.67dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="19.33dp"
                    android:layout_height="19.33dp"
                    android:background="@drawable/drinksnotactive"
                    android:contentDescription="@null"
                    android:onClick="DrinksAct" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="19.33dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="19.33dp"
                    android:layout_height="19.33dp"
                    android:background="@drawable/gamesactive"
                    android:contentDescription="@null" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gamesimg"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#262626" >

        <TextView
            android:id="@+id/textEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="2dp"
            android:fontFamily="Calibri"
            android:text="@string/games_head"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp" >

            <TextView
                android:id="@+id/textYour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="Calibri"
                android:text="@string/your"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDrinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="2dp"
                android:fontFamily="Calibri"
                android:text="@string/caps_games"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:typeface="normal" />
        </LinearLayout>

        <!-- BEGIN GAMES LIST -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listbg"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Games1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="Calibri"
                    android:gravity="center_vertical"
                    android:text="@string/game1"
                    android:textColor="#FFB03A"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listbg"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Games2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="Calibri"
                    android:gravity="center_vertical"
                    android:text="@string/game2"
                    android:textColor="#FFB03A"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>

        <!-- END GAMES LIST -->

        <Button
            android:id="@+id/bCountgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test button.."
            android:onClick="countgame" />
        
        <Button
            android:id="@+id/bPowerhour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Power Hour"
            android:onClick="powerhour" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:orientation="vertical" />

</LinearLayout>