<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu"
        android:baselineAligned="false"
        android:paddingLeft="0dp"
        android:paddingTop="9dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19.33dp"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="18.67dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="18.67dp"
                    android:layout_height="18.67dp"
                    android:background="@drawable/settingsnotactive"
                    android:contentDescription="@null"
                    android:onClick="SettingsAct" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="18.67dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="19.33dp"
                    android:layout_height="19.33dp"
                    android:background="@drawable/drinksnotactive"
                    android:contentDescription="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="19.33dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center" >

                <ImageView
                    android:layout_width="19.33dp"
                    android:layout_height="19.33dp"
                    android:background="@drawable/gamesnotactive"
                    android:contentDescription="@null"
                    android:onClick="GamesAct" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/arrogancegame"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#262626" >

        <TextView
            android:id="@+id/textArrogance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="2dp"
            android:fontFamily="Calibri"
            android:text="@string/Arrogance_game"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="#FFB03A" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="calibri"
                    android:padding="3dp"
                    android:text="@string/whatyouneed"
                    android:textColor="#FFB03A"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="calibri"
                    android:paddingLeft="15dp"
                    android:text="- 1x dices"
                    android:textColor="#FFB03A" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="calibri"
                    android:paddingLeft="15dp"
                    android:text="- 2+ people \n"
                    android:textColor="#FFB03A" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="calibri"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/game_information"
                    android:textColor="#FFB03A"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="calibri"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="This game is really simple you only need to guess what number your going to throw with a dice (1-6). If you guess correctly you need to take a shot. If you don't guess correctly the shot gets filled with more shots until someone throw the right guessed number. The player who threw the guessed number needs to take all of the combined shots!"
                    android:textColor="#FFB03A" />
                
                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn"
                    android:onClick="start"
                    android:orientation="vertical"
                    android:text="Start Game!" />
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#FFB03A" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/backbtn"
                android:contentDescription="@null"
                android:onClick="backbtnGame" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>